# midiverb3

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml
.github/workflows/: release.yaml
mverb3/: __init__.py  __main__.py  app.py  bank.py  data.py
mverb3/ui/: about.py  main.py  settings.py
resources/: icon.icns
ui/: about.ui  main.ui  schema.ui  settings.ui
